<resources>
    <string name="app_name">Trip and Photo Tracker</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="intent_label">@string/app_name</string>

    <!-- Content Descriptions -->
    <string name="photo_content_description">Photo</string>

    <!-- Date Picker -->
    <string name="date_picker_title_start">Select the earliest trip to load</string>
    <string name="date_picker_title_end">Select the latest trip to load</string>

    <!-- Dialog About -->
    <string name="dialog_about_text">Trip and Photo Tracker - Track your adventures!\n\n\n&#169; 2020 Brian Niedzialkoski</string>
    <string name="dialog_about_ok">OK</string>

    <!-- Dialog Help -->
    <string name="dialog_help_title">Navigation Help</string>
    <string name="dialog_help_title_list">Trip List</string>
    <string name="dialog_help_show">Show all trips</string>
    <string name="dialog_help_search">Search trip title</string>
    <string name="dialog_help_first">Select earliest trip</string>
    <string name="dialog_help_second">Select latest trip</string>
    <string name="dialog_help_start">Start trip</string>
    <string name="dialog_help_title_map">Map</string>
    <string name="dialog_help_zoom">Zoom map</string>
    <string name="dialog_help_terrain">Switch map terrain</string>
    <string name="dialog_help_camera">Take picture</string>
    <string name="dialog_help_track">Start/Stop tracking</string>
    <string name="dialog_help_caption">Set trip list photo</string>
    <string name="dialog_help_ok">OK</string>

    <!-- Dialog Photo Delete -->
    <string name="dialog_photo_delete_title">Delete Photo</string>
    <string name="dialog_photo_delete_message">Remove this photo from the trip? This will not remove the photo from your gallery.</string>
    <string name="dialog_photo_delete_positive">Delete</string>
    <string name="dialog_photo_delete_negative">Cancel</string>

    <!-- Dialog Trip Delete -->
    <string name="dialog_trip_delete_title">Delete Trip</string>
    <string name="dialog_trip_delete_message">Are you sure you want to delete this trip? This will not delete your photos in the gallery.</string>
    <string name="dialog_trip_delete_positive">Delete</string>
    <string name="dialog_trip_delete_negative">Cancel</string>

    <!-- Dialog Save -->
    <string name="text_hint_save">Trip Description:</string>
    <string name="dialog_save_title">Tracker stopped</string>
    <string name="dialog_save_cancel">Cancel</string>
    <string name="dialog_save_hint">Add a trip description.</string>
    <string name="dialog_save_save">Save Trip</string>

    <!-- Dialog Search -->
    <string name="text_hint_search">Search trip descriptions:</string>
    <string name="dialog_search_message">Search trips, leave blank to list all trips.</string>
    <string name="dialog_search_cancel">Cancel</string>
    <string name="dialog_search_hint">Search trip titles</string>
    <string name="dialog_search_search">Search</string>

    <!-- Map -->
    <string name="marker_start">Start</string>
    <string name="marker_end">End</string>

    <!-- Notification -->
    <string name="notification_title">Trip and Photo Tracker</string>
    <string name="notification_content">Tracker is running</string>

    <!-- Permissions -->
    <string name="permissions_gps">You must enable gps.</string>
    <string name="permissions_storage">You must enable the storage permission.</string>
    <string name="permissions_tracker">You must enable location and storage permissions.</string>
    <string name="snackbar_settings">Open Settings</string>

    <!-- Snackbar -->
    <string name="snackbar_photo_caption">Caption photo set</string>
    <string name="snackbar_undo">Undo</string>

    <!-- Tracker -->
    <string name="new_session_hint">Start tracking your trip here -></string>
    <string name="snackbar_no_camera">Your device doesn\'t have a camera.</string>
    <string name="snackbar_tracker_camera">Start the trip tracker before taking a photo.</string>
    <string name="text_distance">Distance:\u0020</string>
    <string name="text_distance_units">Miles</string>
    <string name="tracker_save">Trip Saved</string>

    <!-- Trip List -->
    <string name="new_trip_hint">Start a new trip here</string>
</resources>
